# image-gp-2

./: .gitmodules  CMakeLists.txt  commit.py  default.nix
include/: gp_system.h  image_storage.h  operations.h
src/: gp_system.cpp  image_storage.cpp  main.cpp
